--- a/styles/containers/_plugin.css
+++ b/styles/containers/_plugin.css
@@ -10,13 +10,14 @@
   border-radius: 2.7px;
   margin-bottom: 20px;
   padding: 0 25px;
+  box-shadow: 1px 0 4px 1px #333;
 
   @media (--tablet) {
     lost-column: 1/2 2 20px;
   }
 
   @media (--desktop) {
-    lost-column: 1/3 3 20px;
+    lost-column: 1/2 5 20px;
   }
 
   &-title {
@@ -39,7 +40,7 @@
     p {
       margin: 0;
       font-size: responsive 13px 16px;
-      color: #333333;
+      color: #333;
     }
   }
 
