--- a/styles/main.css
+++ b/styles/main.css
@@ -5,10 +5,10 @@
 @import './base/_defaults.css';
 @import './base/_logo.css';
 
-/* components */
-@import './components/_page.css';
-@import './components/_post.css';
-@import './components/_articles-list.css';
-@import './components/_article.css';
-@import './components/_plugins-list.css';
-@import './components/_plugin.css';
+/* containers */
+@import './containers/_post.css';
+@import './containers/_page.css';
+@import './containers/_articles-list.css';
+@import './containers/_article.css';
+@import './containers/_plugins-list.css';
+@import './containers/_plugin.css';
