--- a/styles/containers/_plugin.css
+++ b/styles/containers/_plugin.css
@@ -43,6 +43,13 @@
       color: #333;
     }
   }
+  
+  &-img {
+    img {
+      height: 40px;
+      width: 40px;
+    }
+  }
 
   &-read {
     a {
