Prepared structure for components css

--- a/styles/main.css
+++ b/styles/main.css
@@ -12,3 +12,5 @@
 @import './containers/_article.css';
 @import './containers/_plugins-list.css';
 @import './containers/_plugin.css';
+
+/* components */
