--- a/styles/base/_defaults.css
+++ b/styles/base/_defaults.css
@@ -10,13 +10,13 @@ a {
   color: white;
 
   &:hover {
-    color: white;
+    color: grey;
   }
   &:visited {
-    color: white;
+    color: indigo;
   }
   &:focus {
-    color: white;
+    color: blue;
   }
 }
 
@@ -58,10 +58,10 @@ a {
 
     & > p {
       font-size: 12px;
-      color: whitesmoke;
+      color: white;
 
       & > a {
-        color: whitesmoke;
+        color: white;
         text-decoration: none;
       }
     }
