--- a/styles/components/_page.css
+++ b/styles/components/_page.css
@@ -2,6 +2,7 @@
   lost-column: 1/1 0 0;
   padding-left: 50px;
   padding-right: 50px;
+  padding-top: 40px;
 
   @media (--tablet) {
     padding-left: 35px;
