--- a/styles/components/_post.css
+++ b/styles/components/_post.css
@@ -1,7 +1,6 @@
 .post {
   lost-column: 1/1 0 0;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding: 40px 50px 0;
 
   @media (--tablet) {
     padding-left: 35px;
