--- a/styles/containers/_articles-list.css
+++ b/styles/containers/_articles-list.css
@@ -1,7 +1,6 @@
 .articles-list {
   lost-column: 1/1 0 0;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding: 40px 50px 0;
 
   @media (--tablet) {
     padding-left: 35px;
