--- a/styles/components/_page.css
+++ b/styles/components/_page.css
@@ -20,11 +20,14 @@
     text-align: center;
     margin-top: 30px;
 
-    &-title {}
+    &-title {
+      color: var(--darkColor);
+    }
       
     &-body {
       font-size: responsive 15px 20px;
       line-height: 1.5;
+      color: var(--darkColor);
     }
   }
 }
