--- a/styles/containers/_plugins-list.css
+++ b/styles/containers/_plugins-list.css
@@ -18,7 +18,9 @@
     text-align: center;
     margin-top: 30px;
 
-    &-title {}
+    &-title {
+      color: var(--darkColor);
+    }
 
     &-body {
       font-size: responsive 15px 20px;
