Global Nav fixes

--- a/styles/components/_globalNav.css
+++ b/styles/components/_globalNav.css
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   display: flex;
-  background: var(--orange);
+  background: orange;
   height: 60px;
   box-shadow: 1px 0 4px black;
   &-group {
@@ -16,13 +16,11 @@
     padding-top: 40px;
     list-style-type: none;
     &-item {
-      // padding: 10px;
       height: 40px;
       a {
         color: white;
         text-decoration: none;
-        font-weight: regular;
       }
-  }
+    }
   }
 }
