Change the wrapper color and theme color

--- a/styles/base/_defaults.css
+++ b/styles/base/_defaults.css
@@ -1,10 +1,10 @@
 @lost flexbox flex;
 
 html {
-  background: white;
+  background: #F6F7F8;
 }
 .wrapper {
-  background: white;
+  background: #F6F7F8;
 }
 
 body {
