Updated styles for the new components

--- a/styles/containers/_articles-list.css
+++ b/styles/containers/_articles-list.css
@@ -28,7 +28,7 @@
     }
 
     &-posts {
-      lost-center: 90%;
+      lost-center: 980px;
       lost-align: center;
       margin-bottom: 30px;
     }
