--- a/styles/main.css
+++ b/styles/main.css
@@ -15,3 +15,5 @@
 @import './components/_article.css';
 @import './components/_plugin.css';
 @import './components/_globalNav.css';
+@import './components/_pillNav.css';
+@import './components/_header.css';
