--- a/styles/components/_article.css
+++ b/styles/components/_article.css
@@ -1,29 +1,39 @@
 .article {
   lost-column: 1/1 1 20px;
-  lost-align: center;
-  display: flex;
+  lost-align: reset;
+  // display: flex;
   flex-direction: column;
-  height: 320px;
-  text-align: center;
-  background: ghostwhite;
+  height: 284px;
+  text-align: left;
+  background: white;
   color: var(--darkColor);
   border-radius: 3.7px;
   border: solid 1px #e6e6e6;
   margin-bottom: 20px;
-  padding: 0 25px;
+  // padding: 0 25px;
 
   @media (--tablet) {
     lost-column: 1/2 2 20px;
   }
 
   @media (--desktop) {
-    lost-column: 1/3 3 20px;
+    lost-column: 1/2 2 20px;
+  }
+  &-image {
+    margin:0;
+    height: 152px;
+    width: 100%;
+    background: #DEE0E7;
   }
 
   &-title {
-    margin-bottom: 15px;
+    margin-bottom: 0.2em;
+    lost-align: left;
+    margin-left: 1.22em;
+    margin-top: 0.81em;
 
     h3 {
+
       margin: 0;
 
       a {
@@ -36,11 +46,29 @@
 
   &-description {
     margin-bottom: 15px;
+    margin-left: 1.22em;
 
     p {
       margin: 0;
-      font-size: responsive 13px 16px;
-      color: var(--darkColor);
+      font-size: responsive 12px 14px;
+      color: #8E8E93;
+    }
+  }
+
+  &-metadata {
+    margin-left: 1.22em;
+    lost-flex-container: row;
+    list-style-type: none;
+    &-author {
+    font-size: 0.68em;
+
+    }
+    &-date {
+    font-size: 0.68em;
+    margin-left: 1.22em;
+    a {
+      color: #8E8E93;
+     }
     }
   }
 
