--- a/styles/components/_header.css
+++ b/styles/components/_header.css
@@ -1,22 +1,26 @@
-.global-nav {
+.header {
   lost-column: 1/1 flex;
   lost-align: center;
   position: fixed;
   top: 0;
   display: flex;
   background: var(--theme);
-  height: 60px;
+  height: 120px;
   box-shadow: 1px 0 4px var(--theme);
   &-group {
     display: flex;
     margin: 0 1em;
-    width: 100%;
+    width: 980px;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     padding-top: 40px;
     list-style-type: none;
     &-item {
       height: 40px;
+      margin-left: 1em;
+      &:first-child {
+          margin-left: 0;
+        }
       a {
         color: white;
         text-decoration: none;
